[tool.poetry]
name = "covariancefits"
version = "0.1.0"
description = "Python-based tools to perform chi-squared fits to particle physics measurements while taking the covariance matrices of the data into account."
authors = ["Louis Moureaux"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"

[tool.poetry.scripts]
data2numpy = "covariancefits.conversion:data2numpy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
